--- a/inspo/templates/inspo/edit_inspo_item.html
+++ b/inspo/templates/inspo/edit_inspo_item.html
@@ -25,13 +25,14 @@
                 <!-- Edit New Item -->
                 <div class="row justify-content-center">
                     <div class="col-sm-12 col-lg-6 pb-5">
-                        <form method="POST" action="{% url 'edit_inspo_item' inspo_item.id %}" class="form mb-2" enctype="multipart/form-data">
+                        <form method="POST" action="{% url 'edit_inspo_item' inspo_item.id %}" class="form mb-2"
+                            enctype="multipart/form-data">
                             {% csrf_token %}
                             {% for field in inspo_form %}
                             {% if field.name != 'image' %}
-                                {{ field | as_crispy_field }}
+                            {{ field | as_crispy_field }}
                             {% else %}
-                                {{ field }}
+                            {{ field }}
                             {% endif %}
                             {% endfor %}
                             <div class="text-center pb-3">
@@ -48,5 +49,5 @@
 {% endblock %}
 {% block postloadjs %}
 {{ block.super }}
-    <script src="{% static 'inspo/js/inspo.js' %}"></script>
+<script src="{% static 'inspo/js/inspo.js' %}"></script>
 {% endblock %}
