--- a/inspo/templates/inspo/inspo_item.html
+++ b/inspo/templates/inspo/inspo_item.html
@@ -12,58 +12,65 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-        <div class="section-holder">
-            <div class="form-holder-lg">
-                <div class="row">
-                    <div class="col">
-                        <div class="text-center">
-                            {% if inspo_item.image %}
-                                <img class="inspo-detail image-fluid mt-5" src="{{ inspo_item.image.url }}" alt="{{ inspo_item.title }}" />
-                            {% else %}
-                                <img class="inspo-detail image-fluid mt-5" src="{{ inspo_item.image_url }}" alt="{{ inspo_item.title }}" />
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-lg-6">
-                            <div class="my-2 card-text">
-                                <h2 class="card-text mb-4 pt-4 text-center">{{ inspo_item.title}}</h2>
-                                <p class="card-text">{{ inspo_item.inspo_item_text }}</p>
-                                <hr>
-                            </div>
-                            {% if inspo_item.user == request.user or request.user.is_superuser %}
-                            <div class="text-center">
-                                <a class="btn btn-info mb-5 mr-2" href="{% url 'edit_inspo_item' inspo_item.id %}" role="button">Edit</a>
-                                <button type="button" class="btn btn-danger mb-5" data-bs-toggle="modal"
-                                data-bs-target="#deleteInspoItem">
-                                Delete</button>
-                            </div>
-                                <!-- Delete Button Modal -->
-                                <div class="modal fade" id="deleteInspoItem" tabindex="-1" role="dialog" aria-labelledby="deleteInspoItem" aria-hidden="true">
-                                    <div class="modal-dialog modal-dialog-centered" role="document">
-                                        <div class="modal-content">
-                                                    <div class="modal-header">
-                                                <h4>Delete inspo Item {{ inspo_item.title }} </h4>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                        You are about to delete ({{ inspo_item.title }}) 
-                                            </div>
-                                            <div class="modal-footer">
-                                                <!-- Close and delete product buttons-->
-                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                <a href="{% url 'delete_inspo_item' inspo_item.id  %}" class="btn btn-danger">Delete</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            {% endif %}
-                        </div>
-                    </div>
+<div class="overlay"></div>
+<div class="section-holder">
+    <div class="form-holder-lg">
+        <div class="row">
+            <div class="col">
+                <div class="text-center">
+                    {% if inspo_item.image %}
+                    <img class="inspo-detail image-fluid mt-5" src="{{ inspo_item.image.url }}"
+                        alt="{{ inspo_item.title }}" />
+                    {% else %}
+                    <img class="inspo-detail image-fluid mt-5" src="{{ inspo_item.image_url }}"
+                        alt="{{ inspo_item.title }}" />
+                    {% endif %}
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-lg-6">
+                    <div class="my-2 card-text">
+                        <h2 class="card-text mb-4 pt-4 text-center">{{ inspo_item.title}}</h2>
+                        <p class="card-text">{{ inspo_item.inspo_item_text }}</p>
+                        <hr>
+                    </div>
+                    {% if inspo_item.user == request.user or request.user.is_superuser %}
+                    <div class="text-center">
+                        <a class="btn btn-info mb-5 mr-2" href="{% url 'edit_inspo_item' inspo_item.id %}"
+                            role="button">Edit</a>
+                        <button type="button" class="btn btn-danger mb-5" data-bs-toggle="modal"
+                            data-bs-target="#deleteInspoItem">
+                            Delete</button>
+                    </div>
+                    <!-- Delete Button Modal -->
+                    <div class="modal fade" id="deleteInspoItem" tabindex="-1" role="dialog"
+                        aria-labelledby="deleteInspoItem" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h4>Delete inspo Item {{ inspo_item.title }} </h4>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    You are about to delete ({{ inspo_item.title }})
+                                </div>
+                                <div class="modal-footer">
+                                    <!-- Close and delete product buttons-->
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <a href="{% url 'delete_inspo_item' inspo_item.id  %}"
+                                        class="btn btn-danger">Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
