--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,104 +2,106 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                <div class="image-container my-5">
-                    {% if product.image %}
-                        <a href="{{ product.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                        </a>
-                        {% else %}
-                        <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                        </a>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="product-details-container mb-5 mt-md-5">
-                    <h4 class="mb-0 font-weight-bold">
-                        {{ product.name }}
-                        {% if is_product_in_wishlist %}
-                            <a href="{% url 'remove_product_from_wishlist' product.id 'product' %}" aria-label="remove product from wishlist" class="wishlist wishlist-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
-                        {% else %}
-                            <a href="{% url 'add_product_to_wishlist' product.id %}" aria-label="add product to wishlist" class="wishlist text-danger ml-3"><i class="far fa-heart"></i></a>
-                        {% endif %}
-                    </h4>
-                    {% if product.onsale %}
-                        <p class="mb-0 mt-3 text-left item-price"><s>${{product.price }}</s></p>
-                        <p class="mb-0 mt-3 text-left item-sale-price">${{product.onsale_price }}</p>
-                    {% else %}
-                        <p class="mb-0 mt-3 text-left item-price font-weight-bold">${{product.price }}</p>
-                    {% endif %}
-                    <p class="mt-3">{{ product.description }}</p>
-                    <p class="mt-3">{{ product.dimensions|safe }}</p>
-                </div>
-                {% if request.user.is_superuser %}
-                    <div class="ml-3">
-                        <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                    </div>
+<div class="overlay"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+            <div class="image-container my-5">
+                {% if product.image %}
+                <a href="{{ product.image.url }}" target="_blank">
+                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                </a>
+                {% else %}
+                <a href="">
+                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                </a>
                 {% endif %}
-                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                    {% csrf_token %}
-                    <div class="form-row">
-                        <div class="col-12">
-                            <p class="mt-3"><strong>Quantity:</strong></p>
-                            <div class="form-group w-50">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-black rounded-0" 
-                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                            <span class="icon">
-                                                <i class="fas fa-minus"></i>
-                                            </span>
-                                        </button>
-                                    </div>
-                                    <input class="form-control qty_input" type="number"
-                                        name="quantity" value="1" min="1" max="99"
-                                        data-item_id="{{ product.id }}"
-                                        id="id_qty_{{ product.id }}">
-                                    <div class="input-group-append">
-                                        <button class="increment-qty btn btn-black rounded-0"
-                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                            <span class="icon">
-                                                <i class="fas fa-plus"></i>
-                                            </span>
-                                        </button>
-                                    </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="product-details-container mb-5 mt-md-5">
+                <h4 class="mb-0 font-weight-bold">
+                    {{ product.name }}
+                    {% if is_product_in_wishlist %}
+                    <a href="{% url 'remove_product_from_wishlist' product.id 'product' %}"
+                        aria-label="remove product from wishlist" class="wishlist wishlist-remove text-danger ml-3"><i
+                            class="fas fa-heart"></i></a>
+                    {% else %}
+                    <a href="{% url 'add_product_to_wishlist' product.id %}" aria-label="add product to wishlist"
+                        class="wishlist text-danger ml-3"><i class="far fa-heart"></i></a>
+                    {% endif %}
+                </h4>
+                {% if product.onsale %}
+                <p class="mb-0 mt-3 text-left item-price"><s>${{product.price }}</s></p>
+                <p class="mb-0 mt-3 text-left item-sale-price">${{product.onsale_price }}</p>
+                {% else %}
+                <p class="mb-0 mt-3 text-left item-price font-weight-bold">${{product.price }}</p>
+                {% endif %}
+                <p class="mt-3">{{ product.description }}</p>
+                <p class="mt-3">{{ product.dimensions|safe }}</p>
+            </div>
+            {% if request.user.is_superuser %}
+            <div class="ml-3">
+                <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+            </div>
+            {% endif %}
+            <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                {% csrf_token %}
+                <div class="form-row">
+                    <div class="col-12">
+                        <p class="mt-3"><strong>Quantity:</strong></p>
+                        <div class="form-group w-50">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <button class="decrement-qty btn btn-black rounded-0"
+                                        data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                        <span class="icon">
+                                            <i class="fas fa-minus"></i>
+                                        </span>
+                                    </button>
+                                </div>
+                                <input class="form-control qty_input" type="number" name="quantity" value="1" min="1"
+                                    max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                <div class="input-group-append">
+                                    <button class="increment-qty btn btn-black rounded-0"
+                                        data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                        <span class="icon">
+                                            <i class="fas fa-plus"></i>
+                                        </span>
+                                    </button>
                                 </div>
                             </div>
+                        </div>
 
                         <div class="col-12"></div>
-                            <input type="submit" class="btn btn-black rounded-0 mt-5 mb-5" value="Add to Bag">
-                        </div>
-                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        <input type="submit" class="btn btn-black rounded-0 mt-5 mb-5" value="Add to Bag">
                     </div>
-                </form>
-            </div>
-        </div>
-        <!-- Tab links -->
-        <div id="listing-description" class="col-12 col-lg-8 offset-lg-2">
-            <div class="tab">
-                <button class="tablinks font-weight-bold d-flex" onclick="openContent(event, 'Reviews')">Reviews</button>
-                <button class="tablinks font-weight-bold d-flex" onclick="openContent(event, 'Write_a_review')">Write a review</button>
-            </div>
-            <div>
-            {% include 'reviews/reviews.html' %}
-            </div>
+                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                </div>
+            </form>
         </div>
     </div>
+    <!-- Tab links -->
+    <div id="listing-description" class="col-12 col-lg-8 offset-lg-2">
+        <div class="tab">
+            <button class="tablinks font-weight-bold d-flex" onclick="openContent(event, 'Reviews')">Reviews</button>
+            <button class="tablinks font-weight-bold d-flex" onclick="openContent(event, 'Write_a_review')">Write a
+                review</button>
+        </div>
+        <div>
+            {% include 'reviews/reviews.html' %}
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
