--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,12 +1,14 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5 d-lg-none" href="{% url 'home' %}" id="home-link" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5 d-lg-none" href="{% url 'home' %}"
+                id="home-link" aria-haspopup="true" aria-expanded="false">
                 Home
             </a>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link"
+                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
@@ -17,7 +19,8 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="bed-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="bed-link"
+                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Bedroom
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="bed-link">
@@ -29,7 +32,8 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="livingroom-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="livingroom-link"
+                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Living Room
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="livingroom-link">
@@ -41,46 +45,54 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="diningroom-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="diningroom-link"
+                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dining Room
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="diningroom-link">
                 <a href="{% url 'products' %}?category=dining_chairs" class="dropdown-item">Dining Chairs</a>
                 <a href="{% url 'products' %}?category=dining_tables" class="dropdown-item">Dining Tables</a>
                 <a href="{% url 'products' %}?category=bars" class="dropdown-item">Bars</a>
-                <a href="{% url 'products' %}?category=dining_chairs,dining_tables,bars" class="dropdown-item">All Dining Room</a>
+                <a href="{% url 'products' %}?category=dining_chairs,dining_tables,bars" class="dropdown-item">All
+                    Dining Room</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="office-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="office-link"
+                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Office
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="office-link">
                 <a href="{% url 'products' %}?category=desks" class="dropdown-item">Desks</a>
                 <a href="{% url 'products' %}?category=bookcases" class="dropdown-item">Bookcases</a>
                 <a href="{% url 'products' %}?category=office_chairs" class="dropdown-item">Office Chairs</a>
-                <a href="{% url 'products' %}?category=desks,bookcases,office_chairs" class="dropdown-item">All Office</a>
+                <a href="{% url 'products' %}?category=desks,bookcases,office_chairs" class="dropdown-item">All
+                    Office</a>
             </div>
         </li>
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="garden-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="garden-link"
+                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Garden
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="garden-link">
                 <a href="{% url 'products' %}?category=garden_sofas" class="dropdown-item">Garden Sofas</a>
                 <a href="{% url 'products' %}?category=garden_chairs" class="dropdown-item">Garden Chairs</a>
                 <a href="{% url 'products' %}?category=garden_tables" class="dropdown-item">Garden Tables</a>
-                <a href="{% url 'products' %}?category=garden_tables,garden_chairs,garden_sofas" class="dropdown-item">All Garden</a>
+                <a href="{% url 'products' %}?category=garden_tables,garden_chairs,garden_sofas"
+                    class="dropdown-item">All Garden</a>
             </div>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'products' %}?category=onsale" id="sale-link" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'products' %}?category=onsale"
+                id="sale-link" aria-haspopup="true" aria-expanded="false">
                 On Sale
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'inspo_items' %}" id="inspo_items" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'inspo_items' %}" id="inspo_items"
+                aria-haspopup="true" aria-expanded="false">
                 Inspo
             </a>
         </li>
