--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -3,83 +3,89 @@
 {% block extra_title %}wishlist{% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h2 class="page-banner text-white mt-4 mb-4">Wishlist ({{ wishlist_items_count }})</h2>
-            </div>
+<div class="overlay"></div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h2 class="page-banner text-white mt-4 mb-4">Wishlist ({{ wishlist_items_count }})</h2>
         </div>
-        <div class="row">
-            <div>
-                <div class="row">
-                    {% for wishlist in wishlist_items %}
-                            <!-- List of wishlist -->
-                            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                                <div class="card h-100 border-0">
-                                        {% if wishlist.image %}
-                                            <a href="{% url 'product_detail' wishlist.id %}">
-                                                <img class="card-img-top img-fluid"  src="{{ wishlist.image.url }}" alt="{{ wishlist.name }}">
-                                            </a>
-                                        {% else %}
-                                            <a href="{% url 'product_detail' wishlist.id %}">
-                                                <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="not available">
-                                            </a>
-                                        {% endif %}
-                                        <div class="card-body">
-                                            <div class="row">
-                                                <div class="col-12">
-                                                    <p class="mb-0 text-black font-weight-bold">{{ wishlist.name }}</p>
-                                                </div>
-                                                <div class="col-6 align-self-center font-black">
-                                                    {% if wishlist.onsale %}
-                                                        <p class="mb-0 text-left item-price"><s>${{wishlist.price }}</s></p>
-                                                        <p class="mb-0 text-left item-sale-price">${{wishlist.onsale_price }}</p>
-                                                    {% else %}
-                                                        <p class="mb-0 text-left item-price font-weight-bold">${{wishlist.price }}</p>
-                                                    {% endif %}
-                                                </div>
-                                          </div>
-                                            <div class="center-div pt-3">
-                                                <a class="btn btn-black" data-bs-toggle="modal" data-bs-target="#deletewishlist{{ wishlist.id }}">Delete</a>
-                                                <!-- Delete wishlist modal -->
-                                                <div class="modal fade" id="deletewishlist{{ wishlist.id }}" tabindex="-1"  aria-hidden="true">
-                                                    <div class="modal-dialog">
-                                                        <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <h4>Delete wishlist</h4>
-                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                            </div>
-                                                            <div class="modal-body font-black">
-                                                                Are you sure you want to delete this wishlist?
-                                                            </div>
-                                                            <div class="modal-footer">
-                                                                <!-- Close and delete wishlist buttons-->
-                                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                                <a href="{% url 'remove_product_from_wishlist' wishlist.id 'wishlist' %}" class="btn btn-danger">Delete</a>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
+    </div>
+    <div class="row">
+        <div>
+            <div class="row">
+                {% for wishlist in wishlist_items %}
+                <!-- List of wishlist -->
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                    <div class="card h-100 border-0">
+                        {% if wishlist.image %}
+                        <a href="{% url 'product_detail' wishlist.id %}">
+                            <img class="card-img-top img-fluid" src="{{ wishlist.image.url }}"
+                                alt="{{ wishlist.name }}">
+                        </a>
+                        {% else %}
+                        <a href="{% url 'product_detail' wishlist.id %}">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="not available">
+                        </a>
+                        {% endif %}
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-12">
+                                    <p class="mb-0 text-black font-weight-bold">{{ wishlist.name }}</p>
+                                </div>
+                                <div class="col-6 align-self-center font-black">
+                                    {% if wishlist.onsale %}
+                                    <p class="mb-0 text-left item-price"><s>${{wishlist.price }}</s></p>
+                                    <p class="mb-0 text-left item-sale-price">${{wishlist.onsale_price }}</p>
+                                    {% else %}
+                                    <p class="mb-0 text-left item-price font-weight-bold">${{wishlist.price }}</p>
+                                    {% endif %}
+                                </div>
+                            </div>
+                            <div class="center-div pt-3">
+                                <a class="btn btn-black" data-bs-toggle="modal"
+                                    data-bs-target="#deletewishlist{{ wishlist.id }}">Delete</a>
+                                <!-- Delete wishlist modal -->
+                                <div class="modal fade" id="deletewishlist{{ wishlist.id }}" tabindex="-1"
+                                    aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4>Delete wishlist</h4>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                    aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body font-black">
+                                                Are you sure you want to delete this wishlist?
+                                            </div>
+                                            <div class="modal-footer">
+                                                <!-- Close and delete wishlist buttons-->
+                                                <button type="button" class="btn btn-secondary"
+                                                    data-bs-dismiss="modal">Close</button>
+                                                <a href="{% url 'remove_product_from_wishlist' wishlist.id 'wishlist' %}"
+                                                    class="btn btn-danger">Delete</a>
                                             </div>
                                         </div>
                                     </div>
+                                </div>
                             </div>
-                        {% endfor %}
+                        </div>
+                    </div>
                 </div>
+                {% endfor %}
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
 {% block postloadjs %}
-    {{ block.super }}
-    <script src="{% static 'wishlist/js/wishlist.js' %}"></script>
+{{ block.super }}
+<script src="{% static 'wishlist/js/wishlist.js' %}"></script>
 {% endblock %}
