Updatte styling for reviews

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -54,7 +54,7 @@
   <!-- modals popup 1 -->
   <div class="modal fade" id="Modal-1" tabindex="-1" aria-labelledby="Modal-1" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content-home">
         <div class="modal-header">
           <h5 class="modal-title"><i class="far fa-money-bill-alt"></i> Free Delivery over $200</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -68,7 +68,7 @@
   <!-- modals popup 2 -->
   <div class="modal fade" id="Modal-2" tabindex="-1" aria-labelledby="Modal-2" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content-home">
         <div class="modal-header">
           <h5 class="modal-title"><i class="fas fa-box"></i> Home installation</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -83,7 +83,7 @@
   <!-- modals popup 3 -->
   <div class="modal fade" id="Modal-3" tabindex="-1" aria-labelledby="Modal-3" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content-home">
         <div class="modal-header">
           <h5 class="modal-title"><i class="fas fa-people-carry"></i> Lifetime warranty</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
