--- a/static/css/base.css
+++ b/static/css/base.css
@@ -241,7 +241,7 @@ footer a i:hover {
     font-weight: 900;
 }
 
-.modal-content {
+.modal-content-home {
     background-color:rgb(3, 106, 120);
     color: white;
 }
