--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -27,8 +27,8 @@
                         <form action="{% url 'edit_review' review.pk %}" method="POST" enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ edit_review_form|crispy }}
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-blue ml-2">Submit</button>
+                            <button type="button" class="btn btn-secondary mt-3" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn  btn-info mt-3 ml-2">Submit</button>
                         </form>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <h5>Are you sure you want to delete your review?</h5>
+                    <p>Are you sure you want to delete your review?</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -53,32 +53,35 @@
             </div>
         </div>
     </div>
-</div>
-{% endif %}
-{% endfor %}
-{% else %}
-<div id="Reviews" class="tabcontent mb-3">
-    <p class="mt-3">There are no reviews for this product yet</p>
-    <hr>
-</div>
-{% endif %}
-
-<div id="Write_a_review" class="tabcontent col-12 col-lg-8 offset-lg-2 mb-3">
-    {% if request.user.is_authenticated and review_form != None %}
-    <form class="form mt-3" action="{% url 'add_review' product.pk %}" method="POST">
-        {% csrf_token %}
-        {{ review_form|crispy }}
-        <button id="submit-review-button" class="btn btn-black mt-2 mb-2">
-            Submit
-        </button>
-    </form>
-    <hr>
-    {% elif request.user.is_authenticated and review_form == None %}
-    <p class="mt-3">You have already reviewed this product!</p>
-    <hr>
-    {% else %}
-    <p class="mt-3">Please log in or sign up to leave a review</p>
-    <a class="btn btn-outline-black mb-4" href="{% url 'account_login' %}">Log In</a>
-    <a class="btn btn-outline-black mb-4" href="{% url 'account_signup' %}">Sign Up</a>
     {% endif %}
+    {% endfor %}
+    {% else %}
+    <div id="Reviews" class="tabcontent mb-3">
+        <p class="mt-3">There are no reviews for this product yet</p>
+        <hr>
+    </div>
+    {% endif %}
+
+    <div id="Write_a_review" class="tabcontent col-12 col-lg-8 offset-lg-2 mb-3">
+        {% if request.user.is_authenticated and review_form != None %}
+        <form class="form mt-3" action="{% url 'add_review' product.pk %}" method="POST">
+            {% csrf_token %}
+            {{ review_form|crispy }}
+            <button id="submit-review-button" class="btn btn-black mt-2 mb-2">
+                Submit
+            </button>
+        </form>
+        {% elif request.user.is_authenticated and review_form == None %}
+            <p class="mt-3">You have already reviewed this product!</p>
+            <hr>
+        {% else %}
+            <div class="d-flex justify-content-center">
+                <p>Please log in or sign up to leave a review</p>
+            </div>
+            <div class="col-12 d-flex justify-content-center mt-2 mb-5">
+                <a class="btn btn-outline-black mb-4" href="{% url 'account_login' %}">Log In</a>
+                <a class="btn btn-outline-black mb-4" href="{% url 'account_signup' %}">Sign Up</a>
+            </div>  
+        {% endif %}
+    </div>
 </div>
