Fix bug: add missing div to review page

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -93,10 +93,9 @@
     <div id="listing-description" class="col-12 col-lg-8 offset-lg-2">
         <div class="tab">
             <button class="tablinks font-weight-bold d-flex" onclick="openContent(event, 'Reviews')">Reviews</button>
-            <button class="tablinks font-weight-bold d-flex" onclick="openContent(event, 'Write_a_review')">Write a
-                review</button>
+            <button class="tablinks font-weight-bold d-flex" onclick="openContent(event, 'Write_a_review')">Write a review</button>
         </div>
-            {% include 'reviews/reviews.html' %}
+        {% include 'reviews/reviews.html' %}
     </div>
 </div>
 {% endblock %}
