--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -1,10 +1,11 @@
 {% if reviews.count > 0 %}
 {% for review in reviews %}
-<div id="Reviews" class="tabcontent col-12 col-lg-8 offset-lg-2 mb-3">
+<div id="Reviews" class="tabcontent mb-3">
     <h4 class="mt-3">{{ review.title }}</h4>
     <p class="user-review"> By {{ review.user }} on {{ review.date_created }}</p>
     <p>{{ review.description }}</p>
     <hr>
+</div>
     {% if request.user.username == review.user.user.username %}
     <div class="mt-2">
         <button type="button" class="btn btn-info mb-3" data-bs-toggle="modal" data-bs-target="#editReview">
@@ -62,26 +63,26 @@
     </div>
     {% endif %}
 
-    <div id="Write_a_review" class="tabcontent col-12 col-lg-8 offset-lg-2 mb-3">
+    <div id="Write_a_review" class="tabcontent mb-3">
         {% if request.user.is_authenticated and review_form != None %}
         <form class="form mt-3" action="{% url 'add_review' product.pk %}" method="POST">
             {% csrf_token %}
             {{ review_form|crispy }}
-            <button id="submit-review-button" class="btn btn-black mt-2 mb-2">
+            <button id="submit-review-button" class="btn btn-blue">
                 Submit
             </button>
         </form>
+        <hr>
         {% elif request.user.is_authenticated and review_form == None %}
-            <p class="mt-3">You have already reviewed this product!</p>
-            <hr>
+        <p class="mt-3">You have already reviewed this item!</p>
+        <hr>
         {% else %}
-            <div class="d-flex justify-content-center">
-                <p>Please log in or sign up to leave a review</p>
-            </div>
-            <div class="col-12 d-flex justify-content-center mt-2 mb-5">
-                <a class="btn btn-outline-black mb-4" href="{% url 'account_login' %}">Log In</a>
-                <a class="btn btn-outline-black mb-4" href="{% url 'account_signup' %}">Sign Up</a>
-            </div>  
+        <div class="mt-3">
+            <p>Please log in or sign up to leave a review</p>
+        </div>
+        <div class="mt-2 mb-5">
+            <a class="btn btn-black mr-2" href="{% url 'account_login' %}">Log In</a>
+            <a class="btn btn-black" href="{% url 'account_signup' %}">Sign Up</a>
+        </div>
         {% endif %}
     </div>
-</div>
